fixed issue with mobile overlap in contact form

--- a/rsc/styles/sass/main.sass
+++ b/rsc/styles/sass/main.sass
@@ -203,7 +203,7 @@ section
 		font-style: normal
 		position: relative
 		display: inline-block
-		height: 15em
+		min-height: 15em
 		footer
 			position: absolute
 			bottom: 0
